Styles are improved

--- a/files/app.css
+++ b/files/app.css
@@ -66,6 +66,9 @@ body {
     color: white;
     cursor: pointer;
     font-size: 14px;
+    border-radius: 5px;
+    background-color: black;
+    margin: 1px;
 }
 
 .selected {
